tests/snapshots/corpus__odt_handmade_defaults.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
**Bold via the family default style**
Explicitly back to normal weight
**Unstyled paragraph also inherits the default**
--- stderr ---
