tests/snapshots/corpus__odt_handmade_manifestcomment.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Not encrypted at all.
--- stderr ---
