tests/snapshots/corpus__ppt_handmade_multimaster.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
- **Alpha master body text**
*Beta master body text*
--- stderr ---
