tests/snapshots/corpus__ppt_handmade_sparsenotes.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
First slide text
Second slide text
> Notes for the second slide
--- stderr ---
