tests/snapshots/corpus__pptx_handmade_altpath.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== section 1 ==
## Relocated deck title
--- stderr ---
