tests/snapshots/corpus__pptx_handmade_math.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== section 1 ==
## Quadratic formula
Solve with $x=\frac{-b\pm\sqrt{b^{2}-4ac}}{2a}$
$$
\sum_{i=1}^{n}{x_{i}}=\sin{\left(\theta\right)}
$$
--- stderr ---
